//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  email String [unique, not null]
  name String
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  serverSession server_session [not null]
  userSettings user_setting [not null]
  userRole UserRole [not null, default: 'USER']
  userInfo user_info [not null]
}

Table user_setting {
  id String [pk]
  userId String [not null]
  user user [not null]
  key String [not null]
  value String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table server_session {
  id String [pk]
  userId String [not null]
  user user [not null]
  origin String [not null]
  serverToken String [not null]
  serverType ServerType [not null]
  misskeyUserId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  panels panel [not null]
  serverInfo server_info
  serverUserInfo user_info
  Timeline timeline [not null]

  indexes {
    (userId, origin, misskeyUserId) [unique]
  }
}

Table server_info {
  id String [pk]
  serverSessionId String [unique, not null]
  serverSession server_session [not null]
  name String [not null]
  iconUrl String [not null]
  faviconUrl String [not null]
  themeColor String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table user_info {
  id String [pk]
  name String [not null]
  username String [not null]
  avatarUrl String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  serverSession server_session [not null]
  serverSEssionId String [unique, not null]
  User user
  userId String
}

Table panel {
  id String [pk]
  serverSessionId String [not null]
  serverSession server_session [not null]
  type String [not null]
}

Table timeline {
  id String [pk]
  serverSessionId String [not null]
  serverSession server_session [not null]
  name String [not null]
  type TimelineType [not null]
  listId String
  channelId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Int [not null, default: 0]
}

Enum UserRole {
  ADMIN
  USER
}

Enum ServerType {
  Misskey
  OtherServer
}

Enum TimelineType {
  HOME
  LOCAL
  GLOBAL
  LIST
  USER
  CHANNEL
}

Ref: user_setting.userId > user.id

Ref: server_session.userId > user.id

Ref: server_info.serverSessionId - server_session.id

Ref: user_info.serverSEssionId - server_session.id

Ref: user_info.userId > user.id

Ref: panel.serverSessionId > server_session.id

Ref: timeline.serverSessionId > server_session.id [delete: Cascade]